# ChangeLog for net-libs/courier-authlib
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/courier-authlib/ChangeLog,v 1.17 2004/12/24 10:22:01 corsair Exp $

  24 Dec 2004; Markus Rothe <corsair@gentoo.org>
  courier-authlib-0.51_pre.ebuild:
  Added ~ppc64 to KEYWORDS; bug #75450

  22 Dec 2004; Tuan Van <langthang@gentoo.org>
  courier-authlib-0.51_pre.ebuild:
  arm/hppa/ia64/s390 keywords on behalf of vapier.

  15 Dec 2004; Scott W Taylor <swtaylor@gentoo.org>
  courier-authlib-0.50.20041203.ebuild:
  change keepdir in the other one too

  15 Dec 2004; Scott W Taylor <swtaylor@gentoo.org>
  courier-authlib-0.51_pre.ebuild:
  keep more specific dir, and one that doesn't collide with courier

  10 Dec 2004; Scott W Taylor <swtaylor@gentoo.org>
  -courier-authlib-0.50.20041120.ebuild,
  -courier-authlib-0.50.20041129.ebuild:
  housecleaning

  09 Dec 2004; Scott W Taylor <swtaylor@gentoo.org>
  courier-authlib-0.51_pre.ebuild:
  don't mirror release candidate

*courier-authlib-0.51_pre (09 Dec 2004)

  09 Dec 2004; Scott W Taylor <swtaylor@gentoo.org>
  +courier-authlib-0.51_pre.ebuild:
  bump

*courier-authlib-0.50.20041203 (04 Dec 2004)

  04 Dec 2004; Scott W Taylor <swtaylor@gentoo.org>
  +courier-authlib-0.50.20041203.ebuild:
  bump

  01 Dec 2004; Scott W Taylor <swtaylor@gentoo.org>
  courier-authlib-0.50.20041129.ebuild:
  ~mips

  01 Dec 2004; Scott W Taylor <swtaylor@gentoo.org>
  -courier-authlib-0.50.20041116.ebuild,
  courier-authlib-0.50.20041129.ebuild:
  also check /etc/courier-imap folder for auth*rc configs to migrate

*courier-authlib-0.50.20041129 (01 Dec 2004)

  01 Dec 2004; Scott W Taylor <swtaylor@gentoo.org>
  +courier-authlib-0.50.20041129.ebuild:
  bump. fix migration from self

  27 Nov 2004; Scott W Taylor <swtaylor@gentoo.org>
  files/courier-authlib-initd, courier-authlib-0.50.20041120.ebuild:
  almost there

  26 Nov 2004; Scott W Taylor <swtaylor@gentoo.org>