@@ -1,0 +1,1 @@
+MD5 2ad6837c1eec7582f8634c320f45b2dc courier-authlib-0.52.tar.bz2 1965591
