@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/courier-authlib
-# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/courier-authlib/ChangeLog,v 1.17 2004/12/24 10:22:01 corsair Exp $
+# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/courier-authlib/ChangeLog,v 1.18 2005/01/02 03:59:13 swtaylor Exp $
+
+*courier-authlib-0.52 (01 Jan 2005)
+
+  01 Jan 2005; Scott W Taylor <swtaylor@gentoo.org>
+  -courier-authlib-0.51_pre.ebuild, +courier-authlib-0.52.ebuild:
+  courier-authlib 0.52 released
 
   24 Dec 2004; Markus Rothe <corsair@gentoo.org>
   courier-authlib-0.51_pre.ebuild:
